--- a/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/translations/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-030-195">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -162,6 +162,9 @@
                 <change who="#martina-cotter" when="2023-12-06T11:30:33.911Z" type="text-version" status="1.0.1" xml:id="UT22084-072-030-199">
                     <desc>updated typo in bib.</desc>
                 </change>
+                <change who="#konchog" when="2023-12-06T17:09:19.662Z" type="text-version" status="1.0.2" xml:id="UT22084-072-030-200">
+                    <desc>A few small fixes, including eliminating the redundancy of George being named twice in the acknowledgements as editor.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -174,7 +177,7 @@
                                 <head type="summary" tid="1">Summary</head>
                                 <milestone unit="chunk" xml:id="UT22084-072-030-47"/>
                                 <p tid="2">While staying in Śrāvastī, the Buddha is approached by an
-                                        unnamed “divine being”, who
+                                        unnamed “divine being,” who
                                         inquires as to what behavior merits rebirth in the higher
                                         realms. In response, the Buddha explains, in a series of
                                         concise and powerful verses, that abandoning each of the ten
@@ -192,7 +195,7 @@
                                         English translation and ancillary materials were proofread
                                         by Daniela Espíndola. Thanks to Karin Kerb for making
                                         otherwise unavailable bibliographical material accessible to
-                                        us. The editor was George FitzHerbert.</p>
+                                        us.</p>
                                 <milestone unit="chunk" xml:id="UT22084-072-030-49"/>
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
@@ -383,7 +386,7 @@
                                                 Sanskrit title. In most Kangyurs of the Tshalpa
                                                 line, the title is <title xml:lang="Sa-Ltn">Alpadevatāsūtra</title>, while the Qianlong and
                                                 Kangxi have <title xml:lang="Sa-Ltn">Albalbadevatasūtra</title>  and
-                                                <title xml:lang="Sa-Ltn">Alpalbadevatasūtra</title> (<distinct>sic.</distinct> for <title xml:lang="Sa-Ltn">Alpālpadevatāsūtra</title>) respectively, meaning
+                                                <title xml:lang="Sa-Ltn">Alpalbadevatasūtra</title> (<distinct>sic</distinct> for <title xml:lang="Sa-Ltn">Alpālpadevatāsūtra</title>) respectively, meaning
                                                   <title xml:lang="en">The Very Short Devatā
                                                   Sūtra</title>. The Yongle, Hemis I, and
                                                 independent Kangyurs have <title xml:lang="Sa-Ltn">Svalpadevatāsūtra</title>, also meaning <title xml:lang="en">The Shorter Devatā Sūtra</title>. </p>
@@ -525,11 +528,10 @@
                                                   rtag par dbyen byed pa</foreign>, with the similar
                                                   meaning “that constantly creates discord among
                                                   friends.”</note> friends,</l>
-                                                <l>And delight in appreciation—<note place="end" xml:id="UT22084-072-030-92"> Go here reads
+                                                <l>And delight in appreciation<note place="end" xml:id="UT22084-072-030-92"> Go here reads
                                                   <foreign xml:lang="Bo-Ltn" type="quote">gang dag
                                                   dum par rab dga’ ba</foreign> (“those who delight
-                                                  in concord”).</note>
-                        </l>
+                                                        in concord”).</note>—</l>
                                                 <l>Those beings go to the higher realms.</l>
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-072-030-93"/>
@@ -592,7 +594,7 @@
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-072-030-101"/>
                                         <lg tid="41">
-                                                <l>“I do not see many Brāhmaṇas who have attained nirvāṇa,</l>
+                                                <l>“I do not see many brāhmaṇas who have attained nirvāṇa,</l>
                                                 <l>Who have overcome all enemies and fears,</l>
                                                 <l>Who have crossed over,</l>
                                                 <l>Free from attachment to the world.”<note place="end" xml:id="UT22084-072-030-102"> In Taishō 99, sūtra
