--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-122-96">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -127,6 +127,9 @@
                 <change who="#martina-cotter" when="2023-12-06T12:13:13.658Z" type="text-version" status="1.0.0" xml:id="UT22084-101-122-99">
                     <desc>First published version</desc>
                 </change>
+                <change who="#konchog" when="2023-12-06T17:32:53.557Z" type="text-version" status="1.0.1" xml:id="UT22084-101-122-100">
+                    <desc>A couple small fixes in the intro and notes.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -174,7 +177,7 @@
             manuscripts found in Dunhuang. </p>
           <milestone unit="chunk" xml:id="UT22084-101-122-8"/>
           <p tid="12">It is included in the Compendium of Dhāraṇīs section of the Degé Kangyur and
-            other Tshalpa lineage Kangyurs that have a separate Compendium of Dhāraṇīs section, and
+            other Tshalpa-lineage Kangyurs that have a separate Compendium of Dhāraṇīs section, and
             in the equivalent part of the Tantra section in those that do not label it as such,<note place="end" xml:id="UT22084-101-122-9"> An explicitly named Compendium of Dhāraṇīs
               section is found in the Degé and Urga Kangyurs as well as in the peripheral Kangyurs
               of the Tshalpa lineage (Dodedrak, Phajoding, and Ragya). In contrast, the Berlin,
@@ -183,11 +186,11 @@
               without the label, these collections of dhāraṇīs contain many duplicates of texts also
               found in the General Sūtra or Tantra sections, and in the latter group of Kangyurs
               many dhāraṇī texts therefore appear twice in different parts of the Tantra section.
-            </note> but is not included in any Thempangma lineage Kangyurs. </p>
+            </note> but is not included in any Thempangma-lineage Kangyurs. </p>
           <milestone unit="chunk" xml:id="UT22084-101-122-10"/>
           <p tid="13">Notably, the dhāraṇī is one of only twelve works in the Compendium of Dhāraṇīs
             section that is not duplicated in other sections of the Kangyur. It therefore appears
-            that these twelve texts found their way into the Tshalpa lineage Kangyurs specifically
+            that these twelve texts found their way into the Tshalpa-lineage Kangyurs specifically
             because they were included in a Compendium of Dhāraṇīs that had been compiled on the
             basis of earlier collections of dhāraṇīs and associated ritual texts.<note place="end" xml:id="UT22084-101-122-11"> The opening lines of the table of contents (<foreign xml:lang="Bo-Ltn" type="term">dkar chag</foreign>) of an independent dhāraṇī
               collection printed in Beijing in 1731, found in the Library of the Hungarian Academy
@@ -208,7 +211,7 @@
               details. </note> But there are other factors, as well: the work’s immediate proximity
             in the Kangyur to a text that was certainly translated from Chinese (Toh 1067)<ref rend="pending" target="https://read.84000.co/translation/toh1067.html"/>, the absence
             of a translator’s colophon, the incorrect/incoherent Sanskrit title given at the
-            beginning of all of extant versions of the work, as well as the presence of at least one
+            beginning of all of extant versions of the work, and the presence of at least one
             feature indicative of the older “Chinese” translation lexicon and style described by
             Stein (i.e., the vocabulary and style used to translate Buddhist texts from a variety of
             languages, including Chinese, prior to the lexical standardization imposed by the <title xml:lang="Sa-Ltn">Mahāvyutpatti</title> in 814 <hi rend="small-caps">CE</hi>).<note place="end" xml:id="UT22084-101-122-15"> This feature is the spelling of the
@@ -221,7 +224,7 @@
               translates <foreign xml:lang="Bo-Ltn" type="term">’phra men ma</foreign> it as
               “witch-goddess,” and notes an association with “Bon and Yol.” We have rendered the
               term in the present text as “malevolent female spirits,” though we do think that
-              Stein’s translation captures its intended sense. This term was also <foreign xml:lang="Bo-Ltn" type="term">phra men ma </foreign>was also used to translate the
+              Stein’s translation captures its intended sense. This term <foreign xml:lang="Bo-Ltn" type="term">phra men ma </foreign>was also used to translate the
               Sanskrit <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign>, usually in the sense
               of ḍākinīs as malevolent female entities, not as the “wisdom ḍākinīs” found in the
               higher tantras, where the term is usually translated as <foreign xml:lang="Bo-Ltn" type="term">mkha’ ’gro </foreign>(<foreign xml:lang="Bo-Ltn" type="term">ma</foreign>). See also the note to this term below in the translation and the
@@ -267,7 +270,7 @@
             at the beginning, the resulting <foreign xml:lang="Sa-Ltn">agragaṇyālaṃkāra</foreign> would make sense. 
             <foreign xml:lang="Sa-Ltn">Agragaṇya</foreign>, literally “to be counted as the foremost,”
             simply means “best,” “principal,” or “supreme,” and the title <foreign xml:lang="Sa-Ltn">agragaṇyālaṃkāra­dhāraṇī</foreign> 
-            would thus mean “The Dhāraṇī that is a Supreme
+            would thus mean “The Dhāraṇī That Is a Supreme
             Ornament.” Overall, however, we can only remain circumspect about how the titles of this
             text as they have been preserved in different Kangyurs can be understood.</p>
           <milestone unit="chunk" xml:id="UT22084-101-122-20"/>
@@ -359,7 +362,7 @@
                 believe we can make most sense of the Kangxi and Yongle reading, we nonetheless
                 remain unsure about the meaning of this phrase, and suspect that the passage may be
                 corrupt. </note> and malevolent female spirits;<note place="end" xml:id="UT22084-101-122-38">
-                <foreign xml:lang="Bo-Ltn" type="quote">phra men</foreign>. This term is one of two
+                The term <foreign xml:lang="Bo-Ltn" type="quote">phra men</foreign> is one of two
                 Tibetan translations of the word <foreign xml:lang="Sa-Ltn" type="term">ḍākinī</foreign>, the other being the more familiar <foreign xml:lang="Bo-Ltn" type="term">mkha’ ’gro </foreign>(<foreign xml:lang="Bo-Ltn" type="term">ma</foreign>). It seems the term <foreign xml:lang="Bo-Ltn" type="term">phra
                   men</foreign> (<foreign xml:lang="Bo-Ltn" type="term">ma</foreign>) was used more
                 frequently to render the idea of ḍākinīs as a class of potentially malevolent female
