--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -7,8 +7,8 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of Aśokadatta's Prophecy</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Aśokadattavyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mya ngan med kyis byin pa lung bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Ārya aśokadattavyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan med kyis byin pa lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-013-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-013-2">ErdeneBaatar Erdene-Ochir</author>
@@ -16,13 +16,14 @@
                 <consultant role="projectManager" xml:id="UT22084-043-013-4">Jed Forman</consultant>
                 <editor role="projectEditor" xml:id="UT22084-043-013-5">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-043-013-24">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-043-013-36">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +92,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-15T14:42:20.786Z" type="text-version" status="0.0.12" xml:id="UT22084-043-013-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T15:08:21.874Z" type="text-version" status="0.0.13" xml:id="UT22084-043-013-37">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T08:06:49.585Z" type="translation-status" status="2.b" xml:id="UT22084-043-013-38">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T08:06:49.585Z" type="text-version" status="0.0.14" xml:id="UT22084-043-013-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
