--- a/translations/kangyur/placeholders/083-014_toh466-the_net_of_magical_illusion.xml
+++ b/translations/kangyur/placeholders/083-014_toh466-the_net_of_magical_illusion.xml
@@ -4,12 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu 'phrul dra ba/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">māyājāla</title>
                 <title type="mainTitle" xml:lang="en">The Net of Magical Illusion</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Māyājāla</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu 'phrul dra ba/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Māyājālamahātantrarājanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po chen po sgyu 'phrul dra ba zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">māyājālamahātantrarājanāma</title>
+                <author role="translatorMain" xml:id="UT22084-083-014-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-083-014-5">Bruno Galasek-Hul</author>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status="3"/>
                 <idno xml:id="UT22084-083-014"/>
@@ -35,6 +41,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-03T13:30:44.169Z" type="text-version" status="0.0.1" xml:id="UT22084-083-014-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:31:12.422Z" type="text-version" status="0.0.1" xml:id="UT22084-083-014-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:06:04.93Z" type="text-version" status="0.0.1" xml:id="UT22084-083-014-7">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
