--- a/translations/tengyur/placeholders/027-003_toh1663-sarvabuddhasamayogapanjika.xml
+++ b/translations/tengyur/placeholders/027-003_toh1663-sarvabuddhasamayogapanjika.xml
@@ -4,11 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the “Glorious Union of All the Buddhas Tantra”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­buddha­samayoga­pañjikā</title>
                 <title xml:lang="bo" type="mainTitle">སངས་རྒྱས་ཐམས་ཅད་དང་མཉམ་པར་སྦྱོར་བའི་དཀའ་འགྲེལ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">sangs rgyas thams cad dang mnyam par sbyor ba'i dka' 'grel/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Sarva­buddha­samayoga­pañjikā</title>
-                <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the “Glorious Union of All the Buddhas Tantra”</title>
+                <author role="translatorMain" xml:id="UT23703-027-003-9">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-027-003-10">Adam Krug</author>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status="3"/>
                 <idno xml:id="UT23703-027-003"/>
@@ -42,6 +48,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T14:01:33.224Z" type="text-version" status="0.0.1" xml:id="UT23703-027-003-8">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-28T14:02:11.231Z" type="text-version" status="0.0.1" xml:id="UT23703-027-003-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:09:02.554Z" type="text-version" status="0.0.1" xml:id="UT23703-027-003-12">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
