--- a/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
+++ b/translations/tengyur/placeholders/027-002_toh1662-sarvakalpasamayogadakinimayasambarottaratanratika.xml
@@ -11,6 +11,10 @@
                 <author role="translatorMain" xml:id="UT23703-027-002-7">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT23703-027-002-8">Adam Krug</author>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status="3"/>
                 <idno xml:id="UT23703-027-002"/>
@@ -48,6 +52,9 @@
                     <desc>Auto (update-contributors)</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T14:00:46.888Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-10">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:09:40.486Z" type="text-version" status="0.0.1" xml:id="UT23703-027-002-11">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
