--- a/translations/tengyur/placeholders/027-001_toh1661-srisarvabuddhasamayogatantranamapanjika.xml
+++ b/translations/tengyur/placeholders/027-001_toh1661-srisarvabuddhasamayogatantranamapanjika.xml
@@ -11,6 +11,10 @@
                 <author role="translatorMain" xml:id="UT23703-027-001-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT23703-027-001-9">Adam Krug</author>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status="3"/>
                 <idno xml:id="UT23703-027-001"/>
@@ -49,6 +53,9 @@
                     <desc>Auto (update-contributors)</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-28T14:00:11.732Z" type="text-version" status="0.0.1" xml:id="UT23703-027-001-11">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:10:18.22Z" type="text-version" status="0.0.1" xml:id="UT23703-027-001-12">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
