--- a/translations/kangyur/placeholders/086-006_toh495-the_practice_described_as_the_taming.xml
+++ b/translations/kangyur/placeholders/086-006_toh495-the_practice_described_as_the_taming.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'dul bar gsungs pa'i rtog pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">acalamahākrodharājasya sarvatathāgatasya balāparimita­vīravinayasvākhyāto nāma kalpaḥ</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Acalamahākrodharājasya sarvatathāgatasya balāparimita­vīravinayasvākhyāto nāma kalpaḥ</title>
                 <title type="mainTitle" xml:lang="en">The Practice Described as the Taming</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi khro bo'i rgyal po mi g.yo ba de'i stobs dpag tu med pa rtul phod pa 'dul bar gsungs pa zhes bya ba'i rtog pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryācalamahā­krodharājasya sarvatathāgatasya balāparimita­vīravinayasvākhyāto nāma kalpaḥ</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryācalamahā­krodharājasya sarvatathāgatasya balāparimita­vīravinayasvākhyāto nāma kalpaḥ</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-086-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12214" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:33:51 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-086-006-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:15:26.42Z" type="translation-status" status="3" xml:id="UT22084-086-006-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:15:26.42Z" type="text-version" status="0.0.1" xml:id="UT22084-086-006-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
