--- a/translations/kangyur/placeholders/081-004_toh435-the_vajramrta.xml
+++ b/translations/kangyur/placeholders/081-004_toh435-the_vajramrta.xml
@@ -5,11 +5,16 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje bdud rtsi/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrāmṛtatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vajrāmṛtatantra</title>
                 <title type="mainTitle" xml:lang="en">The Vajrāmṛta</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje bdud rtsi'i rgyud/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +28,19 @@
                     <idno source-id="O1JC114941JC12142" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:19 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-004-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:16:41.203Z" type="translation-status" status="3" xml:id="UT22084-081-004-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:16:41.203Z" type="text-version" status="0.0.1" xml:id="UT22084-081-004-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
