--- a/translations/kangyur/placeholders/081-002_toh433-the_secret_tantra_of_the_mantras_for_the_wrathful_kings.xml
+++ b/translations/kangyur/placeholders/081-002_toh433-the_secret_tantra_of_the_mantras_for_the_wrathful_kings.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">khro bo'i rgyal po thams cad gsang sngags gsang ba'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">krodharājasarvamantraguhya</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Krodharājasarvamantraguhya</title>
                 <title type="mainTitle" xml:lang="en">The Secret Tantra of the Mantras for the Wrathful Kings</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">khro bo'i rgyal po thams cad gsang sngags gsang ba'i rgyud ces bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">krodharājasarvamantra­guhyatantranāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Krodharājasarvamantra­guhyatantranāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12140" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:21 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-002-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:17:41.904Z" type="translation-status" status="3" xml:id="UT22084-081-002-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:17:41.904Z" type="text-version" status="0.0.1" xml:id="UT22084-081-002-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
