--- a/translations/kangyur/placeholders/081-001_toh432-the_tantra_of_the_practice_of_acala.xml
+++ b/translations/kangyur/placeholders/081-001_toh432-the_tantra_of_the_practice_of_acala.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mi g.yo ba'i rtog pa'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">acalakalpatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Acalakalpatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Practice of Acala</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi g.yo ba'i rtog pa'i rgyud kyi rgyal po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryācalakalpatantrarāja</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryācalakalpatantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12139" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:23 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-001-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:18:41.184Z" type="translation-status" status="3" xml:id="UT22084-081-001-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T11:18:41.184Z" type="text-version" status="0.0.1" xml:id="UT22084-081-001-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
