--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -5,22 +5,23 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Verses on Circumambulating Reliquaries</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caityapradakṣiṇagāthā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Caityapradakṣiṇagāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod rten bskor ba'i tshigs bcad/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">mchod rten bskor ba'i tshigs su bcad pa</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Mchod rten bskor ba'i tshigs su bcad pa</title>
+                <author role="translatorMain" xml:id="UT22084-072-021-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-072-021-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-072-021-3">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-021-4">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-072-021-5">Rev. Dr. Ani Kunga Chodron</author>
+                <author role="translatorEng" xml:id="UT22084-072-021-6">George FitzHerbert</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -35,17 +36,45 @@
                     <idno source-id="O1JC114941JC11996" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-31T07:22:48.836Z" user="admin">31/03/2023 07:22:48</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-22T12:37:49.859Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-20T15:04:06.693Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-20T15:05:15.843Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-03-31T07:22:44.548Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-31T07:22:44.548Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-072-021-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-22T12:37:49.859Z" type="translation-status" status="2.h" xml:id="UT22084-072-021-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-22T12:37:49.859Z" type="text-version" status="0.0.2" xml:id="UT22084-072-021-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-20T15:04:06.693Z" type="translation-status" status="2.g" xml:id="UT22084-072-021-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-20T15:04:06.693Z" type="text-version" status="0.0.3" xml:id="UT22084-072-021-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-20T15:05:15.843Z" type="text-version" status="0.0.4" xml:id="UT22084-072-021-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-31T07:22:44.548Z" type="translation-status" status="2.h" xml:id="UT22084-072-021-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-31T07:22:44.548Z" type="text-version" status="0.0.5" xml:id="UT22084-072-021-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-31T07:23:20.008Z" type="text-version" status="0.0.6" xml:id="UT22084-072-021-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-072-021-16">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T14:15:02.603Z" type="translation-status" status="2.f" xml:id="UT22084-072-021-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T14:15:02.603Z" type="text-version" status="0.0.8" xml:id="UT22084-072-021-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
