--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-122-96">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -130,6 +130,9 @@
                 <change who="#konchog" when="2023-12-06T17:32:53.557Z" type="text-version" status="1.0.1" xml:id="UT22084-101-122-100">
                     <desc>A couple small fixes in the intro and notes.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-12-08T13:29:28.127Z" type="text-version" status="1.0.2" xml:id="UT22084-101-122-101">
+                    <desc>Updated acknowledgements.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -152,7 +155,7 @@
         <p tid="4">This publication was completed under the patronage and supervision of 84000: Translating
           the Words of the Buddha.</p>
         <p tid="5">The text was translated, edited, and introduced by the 84000 translation team.
-          Catherine Dalton produced the translation and wrote the introduction. George FitzHerbert edited the translation and the introduction, and
+          Catherine Dalton produced the translation and wrote the introduction. John Canti edited the translation and the introduction, and
           Dawn Collins copyedited the text. Martina Cotter was in charge of the digital
           publication process.</p>
         <lb/>
