--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
         <editor role="TEImarkupEditor" xml:id="UT22084-034-025-49">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -147,6 +147,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-12-04T11:50:55.938Z" type="text-version" status="0.0.3" xml:id="UT22084-034-025-392">
                     <desc>User set version to 0.0.3</desc>
+                </change>
+                <change who="#celso" when="2023-12-08T18:51:21.949Z" type="text-version" status="0.0.4" xml:id="UT22084-034-025-393">
+                    <desc>new glossary key for attestation</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
