--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -8,15 +8,16 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Prasenajidgāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs bcad/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs su bcad pa</title>
-                <author role="translatorMain" xml:id="UT22084-072-022-1"/>
+                <author role="translatorMain" xml:id="UT22084-072-022-1">Elizabeth Angowski</author>
                 <author role="translatorEng" xml:id="UT22084-072-022-2">Elizabeth Angowski</author>
+                <editor role="projectEditor" xml:id="UT22084-072-022-15">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -61,6 +62,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-02T14:19:00.828Z" type="text-version" status="0.0.6" xml:id="UT22084-072-022-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T14:19:36.729Z" type="text-version" status="0.0.7" xml:id="UT22084-072-022-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T08:38:24.333Z" type="translation-status" status="2.e" xml:id="UT22084-072-022-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T08:38:24.333Z" type="text-version" status="0.0.8" xml:id="UT22084-072-022-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
