--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -8,20 +8,21 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Caityapradakṣiṇagāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod rten bskor ba'i tshigs bcad/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Mchod rten bskor ba'i tshigs su bcad pa</title>
-                <author role="translatorMain" xml:id="UT22084-072-021-1"/>
-                <consultant role="dharmaMaster" xml:id="UT22084-072-021-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" xml:id="UT22084-072-021-3">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" xml:id="UT22084-072-021-4">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" xml:id="UT22084-072-021-5">Rev. Dr. Ani Kunga Chodron</author>
+                <author role="translatorMain" xml:id="UT22084-072-021-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-072-021-2">Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-072-021-3">Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-021-4">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-072-021-5">Ani Kunga Chodron</author>
                 <author role="translatorEng" xml:id="UT22084-072-021-6">George FitzHerbert</author>
+                <editor role="projectEditor" xml:id="UT22084-072-021-25">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +73,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-07T14:15:02.603Z" type="text-version" status="0.0.8" xml:id="UT22084-072-021-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-07T14:16:01.363Z" type="text-version" status="0.0.9" xml:id="UT22084-072-021-26">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T08:40:03.549Z" type="translation-status" status="2.e" xml:id="UT22084-072-021-27">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T08:40:03.549Z" type="text-version" status="0.0.10" xml:id="UT22084-072-021-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
