--- a/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos rgya mtsho/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dharmasamudrasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Dharmasamudrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Ocean of the Dharma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">theg pa chen po'i mdo chos rgya mtsho zhes bya ba</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">dharmasamudranāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-49"/>
-                <editor role="reviser" ref="contributors.xml#person-60">Benjamin Ewing</editor>
-                <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <consultant role="projectManager" ref="contributors.xml#person-67">Lowell Cook</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Dharmasamudranāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-066-013-1"/>
+                <editor role="reviser" xml:id="UT22084-066-013-2">Benjamin Ewing</editor>
+                <author role="translatorEng" xml:id="UT22084-066-013-3">Lowell Cook</author>
+                <consultant role="projectManager" xml:id="UT22084-066-013-4">Lowell Cook</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-066-013"/>
                 <date/>
             </publicationStmt>
@@ -33,18 +34,45 @@
                     <idno source-id="O1JC114941JC11907" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-02T10:10:03.252Z" user="admin">02/06/2021 10:10:03</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:21:02.363Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:21:02.363Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:09:01.552Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:09:01.552Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:09:28.07Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-06-02T10:08:47.067Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-02T10:08:47.067Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-02T10:09:36.473Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-06-02T10:09:58.881Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-27T13:21:02.363Z" type="translation-status" status="4" xml:id="UT22084-066-013-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-27T13:21:02.363Z" type="text-version" status="0.0.1" xml:id="UT22084-066-013-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:09:01.552Z" type="translation-status" status="3" xml:id="UT22084-066-013-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:09:01.552Z" type="text-version" status="0.0.2" xml:id="UT22084-066-013-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:09:28.07Z" type="text-version" status="0.0.3" xml:id="UT22084-066-013-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-02T10:08:47.067Z" type="translation-status" status="2.h" xml:id="UT22084-066-013-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-02T10:08:47.067Z" type="text-version" status="0.0.4" xml:id="UT22084-066-013-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-02T10:09:36.473Z" type="text-version" status="0.0.5" xml:id="UT22084-066-013-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-06-02T10:09:58.881Z" type="text-version" status="0.0.6" xml:id="UT22084-066-013-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-066-013-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T16:24:35.38Z" type="translation-status" status="2.g" xml:id="UT22084-066-013-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T16:24:35.38Z" type="text-version" status="0.0.8" xml:id="UT22084-066-013-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
