--- a/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/091-002_toh605,956-the_incantation_of_vajrabhairava.xml
@@ -5,24 +5,25 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Vajrabhairava</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">vajrabhairavadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vajrabhairavadhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jigs byed kyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryavajrabhairavadhāraṇīnāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrabhairavadhāraṇīnāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje 'jigs byed kyi gzungs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje 'jigs byed kyi gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-002-1">Tibetan Classics Translators Guild of New York</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-002-2">Geshe Lozang Jamspal</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-002-3">Kaia Fischer</author>
                 <author role="translatorEng" xml:id="UT22084-091-002-4">David Mellins</author>
                 <editor role="projectEditor" xml:id="UT22084-091-002-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-002-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-002-31">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-002"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +101,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-06T08:50:00.582Z" type="text-version" status="0.0.11" xml:id="UT22084-091-002-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-04T14:44:52.731Z" type="text-version" status="0.0.12" xml:id="UT22084-091-002-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:04:20.884Z" type="translation-status" status="2.b" xml:id="UT22084-091-002-33">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:04:20.884Z" type="text-version" status="0.0.13" xml:id="UT22084-091-002-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
