--- a/translations/kangyur/translations/101-147_toh1091-in_praise_of_the_goddess_revati.xml
+++ b/translations/kangyur/translations/101-147_toh1091-in_praise_of_the_goddess_revati.xml
@@ -18,7 +18,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-147-129">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -26,7 +26,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -38,7 +38,7 @@
         <idno xml:id="UT22084-101-147"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2023-09-29</date>
+        <date>2023-12-13</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh1091" type="text">
@@ -130,6 +130,12 @@
                 </change>
                 <change who="#john" when="2023-12-12T13:07:27.033Z" type="text-version" status="0.0.4" xml:id="UT22084-101-147-131">
                     <desc>Various edits, corrections, links, etc. prior to publication.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-13T21:13:13.124Z" type="translation-status" status="1.a" xml:id="UT22084-101-147-132">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-12-13T21:13:13.124Z" type="text-version" status="1.0.0" xml:id="UT22084-101-147-133">
+                    <desc>First published version</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
