--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -232,6 +232,9 @@
                 </change>
                 <change who="#celso" when="2023-11-17T22:43:13.191Z" type="text-version" status="1.1.1" xml:id="UT22084-089-012-4157">
                     <desc>fixed typo</desc>
+                </change>
+                <change who="#konchog" when="2023-12-14T02:11:10.243Z" type="text-version" status="1.1.2" xml:id="UT22084-089-012-4158">
+                    <desc>Several fixes, mainly throughout the glossary definitions.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -15493,8 +15496,8 @@
                     <lg tid="1840">
                         <l>“You have a perfect and wonderful voice; </l>
                         <l>It roars with the sound of thunder, like a lion. </l>
-                        <l>It has the eight<note place="end" xml:id="UT22084-089-012-3045"> Toh 556
-                                has sixty qualities of the Buddha’s speech, which is the usual
+                        <l>It has the eight<note place="end" xml:id="UT22084-089-012-3045"> Toh 556 and Toh 557
+                                have sixty qualities of the Buddha’s speech, which is the usual
                                 number of qualities ascribed to the speech of the Buddha. </note>
                             sublime aspects and accords with the senses,</l>
                         <l>And it is superior to all the songs of the kalaviṅka.</l>
@@ -16519,8 +16522,8 @@
                                 50 feet. Also called catechu, cachou, cutch tree, black cutch, and
                                 black catechu. Its bark, gum, shoots, and fruits are used in
                                 Āyurvedic medicine. Ludvik suggests <distinct>Albizzia
-                                    lebbek</distinct>. The Chinese term translates to mimosa (see
-                                Ludvik 2007, 309). (In Toh 556, Degé edition, it is <foreign xml:lang="Bo-Ltn">shi ri shA</foreign>). </p>
+                                    lebbek</distinct>. The Chinese term translates to “mimosa” (see
+                                Ludvik 2007, p. 309). (In Toh 556, Degé edition, it is <foreign xml:lang="Bo-Ltn">shi ri shA</foreign>). </p>
                             </note>
                         </gloss>
                     </item>
@@ -16689,7 +16692,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤ་མ་ཀ</term>
                             <term xml:lang="zh" type="attestedSource">芎藭(闍莫迦)</term>
                             <note type="definition">
-                                <p>Meaning unclear. See Ludvik 2007, 310.</p>
+                                <p>Meaning unclear. See Ludvik 2007, p. 310.</p>
                             </note>
                             <!--<term type="alternative">Toh 556 and Toh 557: sha mya Degé 557: sha myang; Toh 555, Bagchi edition: śyābhyaka </term>-->
                         </gloss>
@@ -16703,7 +16706,7 @@
                             <term xml:lang="zh" type="attestedSource">婆律膏(揭羅娑)</term>
                             <note type="definition">
                                 <p>Possibly corresponds to the Borneo camphor tree.
-                                See Ludvik 2007, 315.</p>
+                                See Ludvik 2007, p. 315.</p>
                             </note>
                         </gloss>
                     </item>
@@ -16901,7 +16904,7 @@
                                 <p>Literally the “grounds” in which qualities grow,
                                 and also meaning “levels.” Here it refers specifically to levels of
                                 enlightenment, especially the ten levels of the bodhisattvas.</p>
-                                <p>For the omens, meaning of the names of each bhūmi, the obscurations that persist in each one and their practices, see <ptr target="#UT22084-089-012-1131"/>–<ptr target="#UT22084-089-012-1191"/>.</p>
+                                <p>For the omens, the meaning of the names of each bhūmi, the obscurations that persist in each one, and their practices, see <ptr target="#UT22084-089-012-1131"/>–<ptr target="#UT22084-089-012-1191"/>.</p>
                             </note>
                         </gloss>
                     </item>
@@ -16929,7 +16932,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྤྲ་བ།</term>
                             <term xml:lang="zh" type="attestedSource">艾納</term>
                             <note type="definition">
-                                <p>According to Ludvik, the Chinese corresponds to <foreign xml:lang="la">Laevocamphor</foreign>, Malay camphor, from <foreign xml:lang="la">Blumea balsamiflora</foreign>. Maue and Sertkaya, however, note that <foreign xml:lang="zh">艾</foreign> <foreign xml:lang="Zh-Ltn">ai</foreign> of <foreign xml:lang="zh">艾納</foreign> <foreign xml:lang="Zh-Ltn">aina</foreign> referred to a specific species of <foreign xml:lang="la">Artemisia</foreign>. Gö Chödrup understood <foreign xml:lang="Zh-Ltn">aina</foreign> in this sense. See Ludvik 2007, 312, especially n. 19.</p>
+                                <p>According to Ludvik, the Chinese corresponds to <foreign xml:lang="la">Laevocamphor</foreign>, Malay camphor, from <foreign xml:lang="la">Blumea balsamiflora</foreign>. Maue and Sertkaya, however, note that <foreign xml:lang="zh">艾</foreign> <foreign xml:lang="Zh-Ltn">ai</foreign> of <foreign xml:lang="zh">艾納</foreign> <foreign xml:lang="Zh-Ltn">aina</foreign> referred to a specific species of <foreign xml:lang="la">Artemisia</foreign>. Gö Chödrup understood <foreign xml:lang="Zh-Ltn">aina</foreign> in this sense. See Ludvik 2007, p. 312, especially n. 19.</p>
                             </note>
                             <!--<term type="alternative">Toh 556: <foreign>rdo dreg lo ma</fix>
                             </term>-->
@@ -17273,8 +17276,8 @@
                             <note type="definition">
                                 <p>A resin from the tree
                                 known as sarjarasa, sarja, white dammar, or Indian copal tree
-                                    (<foreign xml:lang="la">Vateria indica</foreign>). The resin
-                                white dammar is used in incense and Āyurvedic medicine. In the
+                                    (<foreign xml:lang="la">Vateria indica</foreign>). The
+                                white dammar resin is used in incense and Āyurvedic medicine. In the
                                 Chinese, <foreign xml:lang="zh">婆</foreign> <foreign xml:lang="Zh-Ltn">po </foreign>is probably a
                                 mistake for <foreign xml:lang="zh">娑</foreign> <foreign xml:lang="Zh-Ltn">suo</foreign>.</p>
                             </note>
@@ -17300,7 +17303,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཐང་ཤིང་པ་ཏྲ།</term>
                             <term xml:lang="zh" type="attestedSource">甘松(苫弭哆)</term>
                             <note type="definition">
-                                <p>Also called <foreign xml:lang="Sa-Ltn">devadāru</foreign> (“divine wood”), <foreign xml:lang="la">Cedrus deodara</foreign>, the Himalayan cedar. While the Chinese transliteration—苫弭哆<foreign xml:lang="Zh-Ltn">shanmiche</foreign>—corresponds to the Sanskrit <foreign xml:lang="Sa-Ltn">śāmyaka</foreign>, the Chinese translation—<foreign xml:lang="zh">甘松</foreign> <foreign xml:lang="Zh-Ltn">gansong</foreign>—refers to yet another substance, namely spikenard. See the entry for “spikenard” and Ludvik 2007, 310. </p>
+                                <p>Also called <foreign xml:lang="Sa-Ltn">devadāru</foreign> (“divine wood”), <foreign xml:lang="la">Cedrus deodara</foreign>, the Himalayan cedar. While the Chinese transliteration—苫弭哆<foreign xml:lang="Zh-Ltn">shanmiche</foreign>—corresponds to the Sanskrit <foreign xml:lang="Sa-Ltn">śāmyaka</foreign>, the Chinese translation—<foreign xml:lang="zh">甘松</foreign> <foreign xml:lang="Zh-Ltn">gansong</foreign>—refers to yet another substance, namely spikenard. See the entry for “spikenard” and Ludvik 2007, p. 310. </p>
                             </note>
                         </gloss>
                     </item>
@@ -17558,7 +17561,7 @@
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">དུ་རུསྐ།</term>
                             <term xml:lang="zh" type="attestedSource">丁子(索瞿者)</term>
                             <note type="definition">
-                                <p>Also known as olibanum, this is a resin from trees of the genus <foreign xml:lang="la">Boswellia</foreign>, in this case <foreign xml:lang="la">Boswellia serrata</foreign>, “Indian frankincense.” It is also known as <foreign xml:lang="Sa-Ltn" type="term">salai</foreign> and <foreign xml:lang="Sa-Ltn" type="term">śallakī</foreign>, <foreign xml:lang="Sa-Ltn" type="term">tilakalka</foreign>, <foreign xml:lang="Sa-Ltn" type="term">vṛścika</foreign>, and <foreign xml:lang="Sa-Ltn" type="term">turuṣka</foreign>. The transliteration in YJ mostly corresponds to the Tibetan and Sanskrit, but the translated term <foreign xml:lang="zh">丁子</foreign> <foreign xml:lang="Zh-Ltn">dingzi</foreign> refers to <foreign xml:lang="la">Carophyllus aromaticus. </foreign>See Ludvik 2007, 315.</p>
+                                <p>Also known as olibanum, this is a resin from trees of the genus <foreign xml:lang="la">Boswellia</foreign>, in this case <foreign xml:lang="la">Boswellia serrata</foreign>, “Indian frankincense.” It is also known as <foreign xml:lang="Sa-Ltn" type="term">salai</foreign> and <foreign xml:lang="Sa-Ltn" type="term">śallakī</foreign>, <foreign xml:lang="Sa-Ltn" type="term">tilakalka</foreign>, <foreign xml:lang="Sa-Ltn" type="term">vṛścika</foreign>, and <foreign xml:lang="Sa-Ltn" type="term">turuṣka</foreign>. The transliteration in YJ mostly corresponds to the Tibetan and Sanskrit, but the translated term <foreign xml:lang="zh">丁子</foreign> <foreign xml:lang="Zh-Ltn">dingzi</foreign> refers to <foreign xml:lang="la">Carophyllus aromaticus. </foreign>See Ludvik 2007, p. 315.</p>
                             </note>
                             <!--<term type="alternative">Bagchi edition: <fix>sihlaka</fix>; Toh 556: <fix>śla la ki</fix>
                             </term>-->
@@ -17951,7 +17954,7 @@
                             <term xml:lang="zh" type="attestedSource">八十隨好</term>
                             <note type="definition">
                                 <p>A set of eighty bodily characteristics borne by buddhas and universal emperors. They are considered “minor” in terms of being secondary to the thirty-two major marks of a great being.</p>
-                                <p>These can be found listed, for example, in Prajñā­pāramitā sūtras (see <ptr target="#UT22084-026-001-5841">Toh 9</ptr>, <ptr target="#UT22084-029-001-5663">Toh 10</ptr>, <ptr target="#UT22084-031-002-292">Toh 11</ptr>) or in the <title xml:lang="en">The Play in Full</title> (Toh 95, <ptr target="#UT22084-046-001-476"/>) and many other sūtras.</p>
+                                <p>These can be found listed, for example, in Prajñā­pāramitā sūtras (see <ptr target="#UT22084-026-001-5841">Toh 9</ptr>, <ptr target="#UT22084-029-001-5663">Toh 10</ptr>, <ptr target="#UT22084-031-002-292">Toh 11</ptr>) or in <title xml:lang="en">The Play in Full</title> (Toh 95, <ptr target="#UT22084-046-001-476"/>) and many other sūtras.</p>
                             </note>
                         </gloss>
                     </item>
@@ -17995,7 +17998,7 @@
                             <note type="definition">
                                 <p>
                                 <foreign xml:lang="la">Bletilla hyacinthina</foreign>, hyacinth
-                                orchid. See Ludvik 2007, 310. Or possibly <foreign xml:lang="la">Rhizoma iridis</foreign>. The root of the iris flower,
+                                orchid. See Ludvik 2007, p. 310. Or possibly <foreign xml:lang="la">Rhizoma iridis</foreign>. The root of the iris flower,
                                 specifically the Indian iris (<foreign xml:lang="la">Iris
                                     pallida</foreign>). The root is said to resemble an arm, while
                                 the leaves resemble swords, and therefore there is a folktale of its
@@ -18024,7 +18027,7 @@
                                 <p>
                                 <foreign xml:lang="la">Butea frondosa</foreign> or <foreign xml:lang="la">Butea monosperma</foreign>. A tree that grows up
                                 to 15 meters tall and has bright red flowers. Other names include
-                                flame of the forest, riddle tree, judas tree, parrot tree, bastard
+                                flame of the forest, riddle tree, Judas tree, parrot tree, bastard
                                 teak, dhak (in Hindi), palas (in Hindi), porasum (in Tamil), and
                                 khakda (in Gujarati). There is a tradition of combining its leaves
                                 together to make a plate for food.</p>
@@ -18793,7 +18796,7 @@
                                 <p>Ludvik gives <foreign xml:lang="la">Ervatamia
                                     divaricata</foreign> or pinwheel flower for <foreign xml:lang="Sa-Ltn">tagara</foreign>. The Chinese refers to
                                     <foreign xml:lang="la">Ocimum basilicum</foreign> or sweet
-                                yellow clover. See Ludvik 2007, 312.</p>
+                                yellow clover. See Ludvik 2007, p. 312.</p>
                             </note>
                             <!--<term type="alternative">Toh 556: <fix>rgya spos</fix></term>-->
                         </gloss>
@@ -18944,8 +18947,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཻ་ཌཱུརྱ།</term>
                             <term xml:lang="zh" type="attestedSource">梨色</term>
                             <note type="definition">
-                                <p>
-                                    <distinct>Goshenite</distinct>: pure beryl without the impurities
+                                <p>Goshenite: pure beryl without the impurities
                                 that give it its various colors.</p>
                             </note>
                         </gloss>
@@ -18958,7 +18960,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀུ་མུ་ད།</term>
                             <term xml:lang="zh" type="attestedSource">拘物頭 [花 / 華]</term>
                             <note type="definition">
-                                <p> <foreign xml:lang="la">Nymphaea pubescens</foreign>. The night-blossoming water lily, sometime referred to as a "night lotus." It can be white, pink, or red.</p>
+                                <p> <foreign xml:lang="la">Nymphaea pubescens</foreign>. The night-blossoming water lily, sometimes referred to as a “night lotus.” It can be white, pink, or red.</p>
                             </note>
                         </gloss>
                     </item>
@@ -23641,7 +23643,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགའ་ལྡན།</term>
                             <term xml:lang="zh" type="attestedSource">覩史多</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The fourth highest of the six paradises in the
                                 desire realm. The paradise where all future buddhas dwell in the
                                 life prior to their awakening.</p>
